# domain-runner

./: AGENTS.md  README.md  pyproject.toml
.agents/skills/domain-runner/: SKILL.md
.agents/skills/sonar-quality/: SKILL.md
.github/workflows/: ci.yml
src/domain_runner/: __init__.py  batch.py  config.py  hooks.py  layer.py  single.py  types.py
tests/: test_batch.py  test_runner.py
