[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domain-runner"
version = "0.1.0"
description = "Layer-agnostic single and batch simulation runners for domain repos"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Benjamin Kirkup", email = "bckirkup@gmail.com" }]
keywords = ["simulation", "batch", "runner", "domain-adapter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/bckirkup/domain-runner"
Repository = "https://github.com/bckirkup/domain-runner"

[tool.hatch.build.targets.wheel]
packages = ["src/domain_runner"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
